Fixed overflow issue on leadership page, cleaned up sass files

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,6 +1,6 @@
-@import '_normalize.scss';
-@import 'variables.scss';
-@import 'helpers.scss';
+@import 'normalize';
+@import 'variables';
+@import 'helpers';
 
 
 
@@ -962,7 +962,7 @@ blockquote { font-style: italic; padding-left: 0 	px; }
 	width: 50%;
 	float: left;
 	height: 100%;
-	overflow: hidden;
+	/* overflow: auto; */
 	position: relative;
 }
 
